Sun Apr  5 09:35:55 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c (gtk_events_pending): take expired timeouts into
	account, otherwise things like e.g. spin-buttons don't work.
	also, count gtk_main_quit() as an event.

Sun Apr  5 08:03:01 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkspinbutton.c: fixed panel allocation and stacking order,
	fixed the base class realization.

	* gtk/gtkmisc.c: implemented widget arguments. 

	* gtk/gtkentry.c: fixes in _realize to behave similar to
 	_size_allocate.

Sat Apr  4 12:23:23 BST 1998  Tony Gale  <gale@gtk.org>

	* docs/gtk_tut.sgml: (gtk-crichton-980403-0) subsections on
	  Aspect Frames and Paned widgets.

	* examples/paned examples/aspectframe: new examples

Fri Apr  3 23:15:55 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtktext.c: Test for need to recompute geometry with
	GTK_WIDGET_REALIZED(), not GTK_WIDGET_DRAWABLE().

1998-04-03  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkhandlebox.c (draw_textured_frame): New function to draw a
	nifty "textured metal" frame.  Could be useful in gtkstyle.c, maybe.
	(gtk_handle_box_paint): Paint a handle that does not make you puke
	when you look at it.

Fri Apr  3 21:03:38 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtktext.c (gtk_text_realize): Call recompute_geometry()
	upon realization, since it can't be done in the previous
	size_allocate.

Fri Apr  3 20:36:52 1998  Owen Taylor  <owt1@cornell.edu>

	* gdk/gdk.c gtk/gtkmain.c: Accept debug options 
	in the form --g[td]k[-no]-debug=xxx as well

Fri Apr  3 18:33:47 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk-config.in: Added flags --prefix[=dir] and
	--exec-prefix[=DIR] which allow querying and overriding the
	configured-in prefix and exec-prefix.

	* gtk.m4: Added configure flags --with-gtk-prefix=
	and --with-gtk-exec-prefix= to set the --prefix and
	--exec-prefix argumetns to gtk.m4

Fri Apr  3 17:14:55 1998  Owen Taylor  <owt1@cornell.edu>

	* gdk/gdk.c: More extensive debugging output
